<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (C) 2024 XperiaLabs Project
  ~
  ~ SPDX-License-Identifier: Apache-2.0
  -->

<resources>
    <!-- App Name -->
    <string name="app_name" translatable="true">Xperia Display</string>

    <!-- Display Settings -->
    <string name="display_settings_title">Image Quality Settings</string>
    <string name="display_setting_summary">Adjust image quality using creator mode</string>
    <string name="display_cm_header">Color Gamut and Contrast</string>
    <string name="display_cm_enable">Creator Mode</string>
    <string name="display_cm_summary">Provide a faithful reproduction of the creator\'s intended vision through high definition display and specially developed image processing compatible with BT.2020 color gamut and 10-bit color of HDR specification.</string>
    <string name="display_xrp_enable">X-Reality Pro for Mobile</string>
    <string name="display_xrp_summary">An additional Bravia Engine inspired display mode to enhance your viewing experience with optimized contrast and colors.</string>
    <string name="display_settings_footer">Apps that support a wide color gamut will automatically be shown in their original colors.\n\n\nHDR videos in fullscreen mode will be automatically displayed with Creator Mode.</string>

    <!-- Display Mode Preview Images -->
    <string name="creator_mode_content_description" translatable="false">Creator Mode Preview</string>
    <string name="xreality_mode_content_description" translatable="false">X-Reality Preview</string>

    <!-- Creator Mode Previous Image Button -->
    <string name="creator_mode_previous" translatable="false">Previous</string>

    <!-- Creator Mode Next Image Button -->
    <string name="creator_mode_next" translatable="false">Next</string>
</resources>