<?xml version="1.0" encoding="utf-8"?>

<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:title="@string/display_settings_title">

    <com.android.settingslib.widget.UntitledPreferenceCategory
        app:iconSpaceReserved="false">

        <com.xperia.settings.preferences.SecureSettingSwitchPreference
            app:key="switchCreatorMode"
            app:iconSpaceReserved="false"
            app:title="@string/display_cm_enable"
            app:summary="@string/display_cm_summary" />

        <com.xperia.settings.preferences.SecureSettingSwitchPreference
            app:key="switchXRealityMode"
            app:iconSpaceReserved="false"
            app:title="@string/display_xrp_enable"
            app:summary="@string/display_xrp_summary" />

    </com.android.settingslib.widget.UntitledPreferenceCategory>

    <com.android.settingslib.widget.FooterPreference
        android:key="display_setting_footer"
        android:title="@string/display_settings_footer"
        android:selectable="false" />

</PreferenceScreen>
